# custom_authorization

./: .gitignore  .test.env  pyproject.toml  pytest.ini  todo.md
.github/workflows/: github-actions-demo.yml
migrations/: env.py
migrations/versions/: 0dc0d7a1b520_test.py
src/: database.py  exceptions.py  main.py
src/api/: api.py  dependencies.py  error_code.py
src/api/endpoints/: auth.py  deploy.py
src/api/responses/: auth.py
src/certs/: jwt-private.pem  jwt-public.pem
src/core/: config.py  types.py
src/models/: __init__.py  types.py  user.py
src/repository/: user.py
src/schemas/: user.py
src/service/: users.py
src/service/auth/: authenticator.py  backend.py  config.py  exceptions.py  jwt.py  password_helper.py
src/service/auth/strategy/: __init__.py  base.py  jwt.py
src/service/auth/transport/: __init__.py  base.py  bearer.py
src/service/auth/validators/: base.py  exceptions.py  validators.py
src/service/deploy/: service.py
src/utils/repository/: base.py  exceptions.py  sqlalchemy.py
tests/: conftest.py
tests/integration/: test_authenticator.py
tests/unit/authentication/: test_backend.py  test_jwt.py  test_strategy_jwt.py  test_transport_bearer.py
