[tool.poetry]
name = "custom-authorization"
version = "0.1.0"
description = ""
authors = ["kali <dim.avvakumov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.28.0"
pydantic = "^2.6.3"
email-validator = "^2.1.1"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.9"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
httpx = "^0.27.0"
pytest-env = "^1.1.3"
makefun = "^1.15.2"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
